# aoc2020-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day18a_grammar.lalrpop  day18b_grammar.lalrpop  day19.rs  main.rs  puzzle.rs  template.rs
