[package]
name = "aoc2020-rust"
version = "0.1.0"
authors = ["Jesper Eskilson <jesper.eskilson@klarna.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = true
opt-level = 3

[build-dependencies]
lalrpop = "*"

[dependencies]
strum = "0.20"
strum_macros = "0.20"
regex = "1"
lazy_static = "1.4.0"
itertools = "0.10.0"
petgraph = "0.5.1"
multimap = "0.8.3"
colored = "*"
lalrpop-util = "*"
